- Added cursor pointer style to the delete icon in the budget summary chart for better user experience. - Added a class to the submit button for styling consistency in the budget submission form. -  The navigation bar was showing a blue line on hover bcz of the anchor tag. Fixed by using !important to the text decoration - There were 3 .nav-item in the style.css combined them to one to make the CSS more readable
Note - for the light theme on the homepage(route '/') 40% of the work is done.. if these changes are good then i will put more changes in the form of small PRs overtime

--- a/SparkyBudget/static/css/budget_transaction_details.css
+++ b/SparkyBudget/static/css/budget_transaction_details.css
@@ -324,6 +324,12 @@
     border-color: var(--table-border-color); /* Use theme variable */
 }
 
+.light-theme .select2-search__field {
+    background-color: #fff !important;
+    color: #333;
+    border: 1px solid #ccc;
+}
+
 /* Styles for the split button */
 .split-button {
     background: linear-gradient(90deg, #4dd0e1, #81d4fa);
